# neural_network_qtpython

./: Cargo.toml  QT.py  README.md  airquality.csv  model
backup/: backupmainpy.txt  mainpy2.txt  mainpy3.txt  qtpy.txt
src/: lib.rs  main.rs
src/data/: preprocessing.rs
src/model/: layers.rs  mod.rs  network.rs
src/training/: history.rs  mod.rs  trainer.rs
src/utils/: input.rs  io.rs  mod.rs  plot.rs
