[package]
name = "neural_network_qtpython"
version = "0.1.0"
edition = "2024"

[lib]
name = "airquality_predictor"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
ndarray = { version = "0.15", features = ["serde"] }
ndarray-rand = "0.14"
rand = "0.8"
csv = "1.1"
libc = "0.2"
plotters = "0.3"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
serde_json = "1.0"
